--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "@tenado/svg2font",
-  "version": "1.0.2",
-  "description": "A easy way to use svg icons in your project!",
+  "version": "1.0.4",
+  "description": "svg2font 是一个简单易用的命令行工具，用于定义自己的字体图标库",
   "keywords": [
     "svg",
     "icon",
     "font"
   ],
   "main": "lib/index.min.css",
+  "bin": {
+    "svg2font": "bin/svg2font"
+  },
   "files": [
-    "lib"
+    "bin"
   ],
   "scripts": {
     "serve": "cross-env npm run build && cp-cli lib example/lib && gulp build && node ./src/serve.js",
@@ -17,14 +20,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tenadolanter/icons.git"
+    "url": "git+https://github.com/tenadolanter/svg2font.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tenadolanter/icons/issues"
+    "url": "https://github.com/tenadolanter/svg2font/issues"
   },
-  "homepage": "https://github.com/tenadolanter/icons#readme",
+  "homepage": "https://github.com/tenadolanter/svg2font#readme",
+  "dependencies": {
+    "svg2ttf": "^6.0.3",
+    "svgicons2svgfont": "^10.0.5",
+    "svgtofont": "^3.14.0",
+    "ttf2eot": "^3.0.0",
+    "ttf2woff": "^3.0.0",
+    "ttf2woff2": "^4.0.4",
+    "chalk": "^4.1.1",
+    "commander": "^7.2.0"
+  },
   "devDependencies": {
     "cp-cli": "^2.0.0",
     "cross-env": "^7.0.3",
@@ -32,12 +45,6 @@
     "express": "^4.18.1",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
-    "gulp-rename": "^2.0.0",
-    "svg2ttf": "^6.0.3",
-    "svgicons2svgfont": "^10.0.5",
-    "svgtofont": "^3.14.0",
-    "ttf2eot": "^3.0.0",
-    "ttf2woff": "^3.0.0",
-    "ttf2woff2": "^4.0.4"
+    "gulp-rename": "^2.0.0"
   }
 }
