--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "svg2font": "bin/svg2font"
   },
   "files": [
-    "lib",
     "bin"
   ],
   "scripts": {
@@ -29,21 +28,23 @@
     "url": "https://github.com/tenadolanter/svg2font/issues"
   },
   "homepage": "https://github.com/tenadolanter/svg2font#readme",
-  "devDependencies": {
+  "dependencies": {
+    "svg2ttf": "^6.0.3",
+    "svgicons2svgfont": "^10.0.5",
+    "svgtofont": "^3.14.0",
+    "ttf2eot": "^3.0.0",
+    "ttf2woff": "^3.0.0",
+    "ttf2woff2": "^4.0.4",
     "chalk": "^4.1.1",
-    "commander": "^7.2.0",
+    "commander": "^7.2.0"
+  },
+  "devDependencies": {
     "cp-cli": "^2.0.0",
     "cross-env": "^7.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "gulp": "^4.0.2",
     "gulp-cssmin": "^0.2.0",
-    "gulp-rename": "^2.0.0",
-    "svg2ttf": "^6.0.3",
-    "svgicons2svgfont": "^10.0.5",
-    "svgtofont": "^3.14.0",
-    "ttf2eot": "^3.0.0",
-    "ttf2woff": "^3.0.0",
-    "ttf2woff2": "^4.0.4"
+    "gulp-rename": "^2.0.0"
   }
 }
